# refactoring_env

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  Controller.cpp  Controller.hpp
Application/Tests/: ControllerTest.cpp
Application/Tests/Mocks/: CommunicationPointMock.hpp
Events/: CMakeLists.txt  Event.hpp  ICommunicationPoint.hpp  IEvent.hpp  IEventHandler.hpp
